# hlp

./: .gitignore  README  README.md  aliases.sh  apuntes-h.org  audio-h.org  cmake-h.org  convert-h.tsv  ctags-h.org  curl-h.org  dotnet-h.org  etags-h.org  find-h.org  firefox-h.org  gcc-h.org  hlp.sh  inferencias  instalar-programas-basicos  instalar-programas.sh  lxde-h.org  makefile-h.org  mongodb-h.org  musica-h.org  mysql-h.org  nuget-h.org  pelican-h.tsv  rsync-h.org  sed-h.org  std-streams-h.org  tar-h.tsv  ubuntu-h.org  vs-h.tsv  vsftp-h.org
R/: devtools-h.org  install  install-packages  linalg-h.org  polynom-h.org  r-h.org  r-h.tsv  repos-ubuntu
android/: android-h.org
asm/: convencion-c.org  instrucciones.org  links.org  objconv.org  registros.org  syscalls.org  totxt
autotools/: links.org
awk/: awk-h.org  builtin-variables.org
bash/: bash-h.org  bash-string-h.tsv
c/: c-h.org  getmac.c  printf.tsv
cpp/: types.tsv
cpp/boost/asio/: CMakeLists.txt  client-https.cpp  client2.cpp  server.cpp
cpp/boost/asio/examples/: CMakeLists.txt  README
cpp/boost/asio/examples/http/: client-http.cpp  server-http.cpp
cpp/boost/asio/examples/http/server-http/include/: reply.hpp  request_parser.hpp
cpp/boost/asio/examples/http/server-http/src/: mime_types.cpp  reply.cpp  request_parser.cpp
cpp/boost/asio/examples/multicast/: CMakeLists.txt  receiver.cpp  sender.cpp
cpp/boost/asio/examples/tcp/: client-socket.cpp  client.cpp  server-bind.cpp  server-socket.cpp  server.cpp
cpp/boost/asio/http/server-http/: main.cpp
cpp/boost/asio/http/server-http/include/: request.hpp
cpp/boost/asio/http/server-http/src/: connection.cpp  server.cpp
cpp/boost/asio/https/: client-https.cpp
cpp/boost/asio/server-http/: makefile
cpp/boost/asio/server-http/include/: request_handler.hpp  server.hpp
cpp/boost/asio/server-http/src/: request_handler.cpp
cpp/boost/asio/tcp/: client-connect.cpp  server-listen.cpp
cpp/boost/asio/tutorial/: daytime1-sync-tcp-client.cpp  daytime2-sync-tcp-server.cpp  daytime3-async-tcp-sever.cpp  daytime4-sync-udp-client.cpp  daytime5-sync-udp-server.cpp  daytime6-async-udp-server.cpp  readme
cpp/boost/beast/examples/: CMakeLists.txt  http_server_async.cpp
csharp/: faq.org
curl/: imap-h.org
debian/: crear-usb-booteable.org
elisp/: chars-h.org  elisp-h.org  elisp-h.tsv
emacs/: batch-h.org  c-or-c++-ide.org  calc-h.org  calendar-h.org  commands-h.org  csv-mode-h.org  dired-h.org  editor-h.org  emacs-init.el  emacs-w3m-h.org  etc-h.org  eww-h.org  ibuffer-h.org  install  install-packages.el  key-sequences-h.org  magit-h.org  naturales.asm  packages.el  packages.org  printing-ps-h.org  regex-h.org  registers-h.org  shell-h.org
ffmpeg/: convert2mp3.sh  ffmpeg-h.org
gdb/: backtrace.c  gdb-h.org
git/: git-checkout-h.org  git-commit-h.org  git-config-h.org  git-diff-h.org  git-h.org  git-ignore-h.org  git-log-h.org  git-ls-files-h.org  git-merge-h.org  git-ref.org  git-remove-from-history  git-rm-from-history.sh
gpg/: gpg-h.org  public-keys
grafos/: defs.org  defs.tex
guile/: guile-links.org
haskell/: .gitignore  haskell-h.org
html/: html-h.tsv
images/: imagemagik-h.org  images-h.org
intel64/: flags.org  syscalls
kotlin/: .gitignore
latex/: latex-h.org  latex-math-h.org
linalg/: eigenvalues.org
linux/: boot-text-mode.org  file-types.tsv  linux-h.org  linux-h.tsv
network/: cookies.org  links.org  (+5 more)
(+671 files in other folders)
